Sonarqube, jacoco, surefire and failsafe